--- a/slides/lecture2.qmd
+++ b/slides/lecture2.qmd
@@ -537,7 +537,7 @@ test_that("Our density implementation corresponds to density()", {
   expect_equal(
     kern_dens(phipsi$psi, 0.2)$y,
     density(phipsi$psi, 0.2)$y,
-    tolerance = 1e-3 #<<
+    tolerance = 1e-3
   )
 })
 ```
@@ -787,7 +787,7 @@ rule of thumb for choosing the bandwidth. Test against the default behavior of
 
 ```{r}
 kern_dens_silverman <- function(x, h = NULL, m = 512) {
-  # If h is NULL, compute h using Silverman's rule #<<
+  # If h is NULL, compute h using Silverman's rule
 
   rg <- range(x)
   xx <- seq(rg[1] - 3 * h, rg[2] + 3 * h, length.out = m)
