--- a/assignments/assignment1.qmd
+++ b/assignments/assignment1.qmd
@@ -57,10 +57,14 @@ readability. And so on.
 # A: Density Estimation
 
 Implement a kernel density estimator using the Epanechnikov kernel,
-$$K(x) = \frac{3}{4}(1 - x^2) 1_{[-1, 1]}(x),$$ and implement one or more
-bandwidth selection algorithms using either AMISE plug-in methods or
-cross-validation methods. Test the implementation and compare the results with
-the results of using `density()` in R.
+
+$$
+K(x) = \frac{3}{4}(1 - x^2) 1_{[-1, 1]}(x),
+$$
+
+and implement one or more bandwidth selection algorithms using either AMISE
+plug-in methods or cross-validation methods. Test the implementation and compare
+the results with the results of using `density()` in R.
 
 It may be a good idea to use real data to investigate how the bandwidth
 selection works, but for benchmarking and profiling it is best to use simulated
